# jetson-crosscompile-template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  GettingStarted.md  Makefile  README.md  host.toolchain.cmake  jetson-t194.toolchain.cmake  jetson-t210.toolchain.cmake
.github/workflows/: ci.yml
cmake/: CppWarnings.cmake  cpp_warnings.cmake
docs/: GettingStarted.md
include/: errors.hpp  hello.hpp
include/cuda/: CudaArrayView.hpp  CudaBuffer.hpp  CudaBuffer2D.hpp  CudaBufferDevice.hpp  CudaBufferDevice2D.hpp  CudaBufferHostPinned.hpp  CudaBufferPitched2D.hpp  CudaBufferUnified.hpp  CudaImageView.hpp  arithmetic.hpp  stream.hpp  types.hpp
include/nvmm/: NvmmBuffer.hpp  types.hpp
scripts/: Dockerfile.cuda-10.2_amd64  Dockerfile.cuda-11.4_amd64  Dockerfile.jetson-t194  Dockerfile.jetson-t210  extract-cuda.sh  extract-sysroot.sh
src/: hello.cu  main.cpp  test.cpp
src/backend/common/: CudaImageView.cpp  errors.cpp
src/backend/cpu/: CudaBufferDevice.cpp  CudaBufferDevice2D.cpp  CudaBufferHostPinned.cpp  CudaBufferPitched2D.cpp  CudaBufferUnified.cpp  arithmetic.cpp  stream.cpp  tbb_kernels.hpp
src/backend/gpu/: CudaBufferDevice.cpp  CudaBufferDevice2D.cpp  CudaBufferHostPinned.cpp  CudaBufferPitched2D.cpp  CudaBufferUnified.cpp  arithmetic.cu  cuda_common.hpp  cuda_expected.hpp  stream.cpp
tests/: CMakeLists.txt  main.cpp  requires.hpp  test_CudaBufferDevice.cpp  test_CudaBufferDevice2D.cpp  test_CudaBufferHostPinned.cpp  test_CudaBufferPitched2D.cpp  test_CudaBufferUnified.cpp  test_arithmetic.cpp
